// Copyright 2021-2024 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";
package spec;

option features.message_encoding = DELIMITED;

// Map fields are syntactic sugar for a repeated message field with field 1 for
// key and field 2 for value. Despite that, the file feature message_encoding =
// DELIMITED should NOT apply to this "synthetic" message, and it should also
// not apply to map message values.
message Edition2023MapEncodingMessage {
  map<int32, string> string_map = 77;
  map<int32, Child> message_map = 88;
  message Child {}
}
